# Stratus-Engine

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: live_openai_demo.py
src/stratus_engine/: __init__.py  embeddings.py  engine.py  extractor.py  memory_store.py  metrics.py  models.py  openai_chat.py  session_store.py  vector_store.py
tests/: test_engine.py
